--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     <div id="result" class="result"></div>
 
     <div class="for-developers ">
-        <div class="for-developers__title">О проекте</div>
+        <div class="for-developers__title">О проекте (нажми меня)</div>
         <div class="for-developers__text ">
             Это приложение разработано Мыльцевым Олегом 04-08-2023 на базе API nationalize.io. Принимая имя от пользователя, оно делает запрос к api и получает JSON обьект со странами, в которых чаще всего встречается введённое имя. Затем, программа декодирует его и выводит на страницу.
         </div>
